# microfloat

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
microfloat/: __init__.py  format.py  ops.py
