[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "microfloat"
version = "0.1.0"
description = "Tiny, customizable floating formats using NumPy bitfields/dtypes"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"numpy>=1.26",
]
authors = [
	{ name = "Your Name" }
]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["microfloat*"]


